--- a/FreeboxClient/DownloadCell.xib
+++ b/FreeboxClient/DownloadCell.xib
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="156" id="ee7-fR-ZRB" customClass="DownloadCell" customModule="FreeboxClient" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="66" id="ee7-fR-ZRB" customClass="DownloadCell" customModule="FreeboxClient" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ee7-fR-ZRB" id="HJT-No-BeF">
@@ -17,34 +17,39 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="0o0-rG-1Ra"/>
                         </constraints>
+                        <color key="progressTintColor" red="0.088718947161049222" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="trackTintColor" red="1" green="0.059514363288325711" blue="0.13337253522510051" alpha="1" colorSpace="calibratedRGB"/>
                     </progressView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cbo-5x-1iF">
-                        <rect key="frame" x="8" y="13" width="40" height="40"/>
+                        <rect key="frame" x="8" y="17" width="32" height="32"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="Nh5-n9-HN1"/>
-                            <constraint firstAttribute="width" constant="40" id="O15-zQ-25Z"/>
+                            <constraint firstAttribute="height" constant="32" id="Nh5-n9-HN1"/>
+                            <constraint firstAttribute="width" constant="32" id="O15-zQ-25Z"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wm3-CF-WYf">
-                        <rect key="frame" x="56" y="8" width="256" height="21"/>
+                        <rect key="frame" x="48" y="8" width="264" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="no6-jX-clk">
-                        <rect key="frame" x="56" y="37" width="96" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500Mo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="no6-jX-clk">
+                        <rect key="frame" x="48" y="37" width="58" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="58" id="zPC-aZ-Fbl"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eII-Nw-RmR">
-                        <rect key="frame" x="216" y="37" width="96" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eII-Nw-RmR">
+                        <rect key="frame" x="222" y="37" width="90" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yan-9c-0nw">
-                        <rect key="frame" x="160" y="37" width="48" height="21"/>
+                        <rect key="frame" x="114" y="37" width="48" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="48" id="peY-U9-Z3M"/>
                         </constraints>
@@ -52,15 +57,26 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1m55" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqW-2D-gHi">
+                        <rect key="frame" x="170" y="37" width="44" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="44" id="MKj-Mg-lbS"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="gqW-2D-gHi" firstAttribute="top" secondItem="wm3-CF-WYf" secondAttribute="bottom" constant="8" id="01i-m2-50H"/>
                     <constraint firstItem="no6-jX-clk" firstAttribute="top" secondItem="wm3-CF-WYf" secondAttribute="bottom" constant="8" id="0Bl-qN-eCZ"/>
+                    <constraint firstItem="gqW-2D-gHi" firstAttribute="leading" secondItem="yan-9c-0nw" secondAttribute="trailing" constant="8" id="1c5-u0-fWF"/>
                     <constraint firstItem="wm3-CF-WYf" firstAttribute="top" secondItem="HJT-No-BeF" secondAttribute="top" constant="8" id="25v-zL-dJY"/>
                     <constraint firstAttribute="trailing" secondItem="eII-Nw-RmR" secondAttribute="trailing" constant="8" id="7au-fq-ETu"/>
                     <constraint firstItem="yan-9c-0nw" firstAttribute="top" secondItem="wm3-CF-WYf" secondAttribute="bottom" constant="8" id="7lN-ph-ZVh"/>
                     <constraint firstItem="wm3-CF-WYf" firstAttribute="height" secondItem="no6-jX-clk" secondAttribute="height" id="8ww-3u-ruD"/>
-                    <constraint firstItem="eII-Nw-RmR" firstAttribute="leading" secondItem="yan-9c-0nw" secondAttribute="trailing" constant="8" id="A2h-0e-bIA"/>
                     <constraint firstItem="eII-Nw-RmR" firstAttribute="top" secondItem="wm3-CF-WYf" secondAttribute="bottom" constant="8" id="B0o-ly-6Nn"/>
+                    <constraint firstItem="eII-Nw-RmR" firstAttribute="leading" secondItem="gqW-2D-gHi" secondAttribute="trailing" constant="8" id="ErX-Zj-3xv"/>
                     <constraint firstItem="wm3-CF-WYf" firstAttribute="height" secondItem="yan-9c-0nw" secondAttribute="height" id="Gew-sq-3cm"/>
                     <constraint firstItem="wm3-CF-WYf" firstAttribute="leading" secondItem="Cbo-5x-1iF" secondAttribute="trailing" constant="8" id="J8o-CL-WjW"/>
                     <constraint firstItem="yan-9c-0nw" firstAttribute="leading" secondItem="no6-jX-clk" secondAttribute="trailing" constant="8" id="L0i-cI-XnC"/>
@@ -69,14 +85,15 @@
                     <constraint firstItem="no6-jX-clk" firstAttribute="leading" secondItem="Cbo-5x-1iF" secondAttribute="trailing" constant="8" id="bqC-o7-mIR"/>
                     <constraint firstItem="wm3-CF-WYf" firstAttribute="height" secondItem="eII-Nw-RmR" secondAttribute="height" id="djt-0g-UEv"/>
                     <constraint firstItem="Cbo-5x-1iF" firstAttribute="leading" secondItem="HJT-No-BeF" secondAttribute="leading" constant="8" id="kUS-N8-tQO"/>
-                    <constraint firstItem="no6-jX-clk" firstAttribute="width" secondItem="eII-Nw-RmR" secondAttribute="width" id="o4k-LR-nqt"/>
                     <constraint firstItem="4Ca-cA-InZ" firstAttribute="top" secondItem="HJT-No-BeF" secondAttribute="top" id="p9W-s0-Hky"/>
                     <constraint firstAttribute="trailing" secondItem="wm3-CF-WYf" secondAttribute="trailing" constant="8" id="pFR-TE-KGM"/>
+                    <constraint firstItem="gqW-2D-gHi" firstAttribute="height" secondItem="wm3-CF-WYf" secondAttribute="height" id="tp1-W9-dnm"/>
                     <constraint firstAttribute="centerY" secondItem="Cbo-5x-1iF" secondAttribute="centerY" id="ugd-5i-Ynb"/>
                     <constraint firstItem="4Ca-cA-InZ" firstAttribute="leading" secondItem="HJT-No-BeF" secondAttribute="leading" id="zjL-Nt-7Ac"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="eta" destination="gqW-2D-gHi" id="IIO-Rn-UkJ"/>
                 <outlet property="name" destination="wm3-CF-WYf" id="dpL-ZN-Nwd"/>
                 <outlet property="pct" destination="yan-9c-0nw" id="B4I-39-XvK"/>
                 <outlet property="progress" destination="4Ca-cA-InZ" id="rgm-DN-0t9"/>
@@ -84,7 +101,12 @@
                 <outlet property="state" destination="Cbo-5x-1iF" id="En7-TO-Zf1"/>
                 <outlet property="upDown" destination="eII-Nw-RmR" id="S9v-3S-Rhs"/>
             </connections>
-            <point key="canvasLocation" x="758" y="235"/>
+            <point key="canvasLocation" x="758" y="231"/>
         </tableViewCell>
     </objects>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
